manifests/dev/openobserve/Service-openobserve-openobserve-standalone-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: openobserve
    app.kubernetes.io/name: openobserve-standalone
  name: openobserve-openobserve-standalone-headless
  namespace: openobserve
spec:
  clusterIP: None
  ports:
    - name: http
      port: 5080
      protocol: TCP
      targetPort: http
    - name: grpc
      port: 5081
      protocol: TCP
      targetPort: grpc
  selector:
    app.kubernetes.io/component: openobserve
    app.kubernetes.io/instance: openobserve
    app.kubernetes.io/name: openobserve-standalone
