manifests/dev/openobserve/HTTPRoute-openobserve.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openobserve
  namespace: openobserve
spec:
  hostnames:
    - openobserve-dev.gaslightctf.cooking
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: openobserve-openobserve-standalone
          port: 5080
